feat: refactor world-map.js, remove getCovidDataFromAPI and getPopulationDataFromAPI

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
     "start": "cross-env NODE_ENV=development webpack serve --mode development",
     "lint": "eslint --debug src/",
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
     "lint:write": "eslint --debug src/ --fix",
     "prettier": "prettier --write src/**/*.js"
   },
